# ai-books-analyze

./: README.md  RESTORE.md  RESTORE_GUIDE.md  docker-compose.yml  nginx.conf
.github/workflows/: deploy.yml
backend/: .dockerignore  .env.example  Dockerfile  Procfile  pyproject.toml
backend/books/: apps.py  chat_views.py  constants.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
backend/books/migrations/: 0001_initial.py  0002_initial.py  0003_book_pdf_alter_book_image.py  0004_readingprogress.py  0005_tag_book_tags_bookshelf_review.py  0006_notification_tagfollow.py  0007_readingprogress_total_pages.py  0008_bookanalysis.py  0009_bookanalysis_status_error.py  0010_chatmessage.py
backend/config/: settings.py  urls.py
backend/users/: authentication.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/api/: admin.js  auth.js  books.js  client.js  users.js
frontend/src/components/: AppNavbar.jsx  BookChat.jsx  BookEditModal.jsx  BookFormModal.jsx  ConfirmDeleteModal.jsx  Icon.jsx  PdfReaderModal.jsx  ReviewModal.jsx  VerificationBanner.jsx
frontend/src/contexts/: AuthContext.jsx  ThemeContext.jsx
frontend/src/pages/: AdminUsersPage.jsx  BookDetailPage.jsx  BooksPage.jsx  CheckEmailPage.jsx  DashboardPage.jsx  ForgotPasswordPage.jsx  HomePage.jsx  LoginPage.jsx  ProfilePage.jsx  RegisterPage.jsx  ResetPasswordPage.jsx  (+4 more)
