[project]
name = "django-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.43.32",
    "django>=6.0.6",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
    "django-ses>=4.7.2",
    "django-storages[s3]>=1.14.6",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "pillow>=12.2.0",
    "psycopg[binary]>=3.2",
    "dj-database-url>=2.3",
    "redis>=5.0",
    "python-dotenv>=1.2.2",
    "gunicorn>=23.0",
    "whitenoise[brotli]>=6.9",
]
